# HttpMetadataInventory

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
certs/: .gitignore
src/: main.py
src/api/: __init__.py  dependencies.py
src/api/routes/: __init__.py  health.py  metadata.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/models/: __init__.py  metadata.py
src/repositories/: database.py  metadata_repository.py
src/services/: collector.py  metadata_service.py
src/workers/: __init__.py  background_tasks.py
tests/: conftest.py
tests/test_api/: test_metadata_routes.py
tests/test_repositories/: test_metadata_repository.py
tests/test_services/: test_collector.py  test_metadata_service.py
tests/test_workers/: test_background_tasks.py
